[gd_scene load_steps=4 format=3 uid="uid://dfipfpqmit0gv"]

[ext_resource type="Script" path="res://textbox/text_box.gd" id="1_cbqa3"]
[ext_resource type="Texture2D" uid="uid://ud52jdv0dgiy" path="res://textbox/Sprite-0001-export.png" id="1_uj1ck"]
[ext_resource type="FontFile" uid="uid://0rechb4sdw2d" path="res://asset/superstar_memesbruh03.ttf" id="2_4hu7n"]

[node name="TextBox" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cbqa3")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_uj1ck")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_4hu7n")
vertical_alignment = 1

[node name="LetterTimer" type="Timer" parent="."]
one_shot = true

[node name="NextLineTimer" type="Timer" parent="."]

[connection signal="timeout" from="LetterTimer" to="." method="_on_letter_timer_timeout"]
